--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -19,6 +19,30 @@ a {
   margin-left: 600px;
   font-weight: normal;
 }
+img {
+  display: block;
+  margin-left: 600px;
+}
 header {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+.Rest {
+font-family: Helvetica;
+text-align: center;
+font-size: 23px;
+font-weight: bold;
+}
+p{
+  font-family: Helvetica;
+  text-align: center;
+  font-size: 14px;
+  font-weight: normal;
+}
+.ny {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
 }
