--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -46,3 +46,17 @@ p{
   font-weight: bold;
   color: white;
 }
+footer {
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left !important;
+}
+h4 {
+    font-family: Helvetica;
+    font-size: 11px;
+    color: white;
+    background-color: dimgray;
+    text-align: left;
+  }
