--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -60,3 +60,10 @@ h4 {
     background-color: dimgray;
     text-align: left;
   }
+.footer a {
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
